[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/enemies/Bat_Sprite_Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/murcielago.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 62.1099

[sub_resource type="CircleShape2D" id=2]
radius = 62.314

[sub_resource type="CircleShape2D" id=3]
radius = 550.852

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "angry",
"speed": 8.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="Animation" id=20]
resource_name = "murido"
length = 0.6
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spr_chobi:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spr_chobi:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}

[node name="murcielago" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( -8.89539, 2.5415 )
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="coll_chobi" type="CollisionShape2D" parent="."]
position = Vector2( -1.23967, 0.656693 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="hitbox" type="Area2D" parent="coll_chobi"]
collision_layer = 8
collision_mask = 3

[node name="coll_area" type="CollisionShape2D" parent="coll_chobi/hitbox"]
position = Vector2( -0.0979805, 0.0979805 )
shape = SubResource( 2 )

[node name="area_agro" type="Area2D" parent="."]
position = Vector2( -1.08436, 1.129 )
collision_layer = 8
__meta__ = {
"_edit_group_": true
}

[node name="coll_ray" type="RayCast2D" parent="area_agro"]
modulate = Color( 0.180392, 0.956863, 0.0196078, 1 )
enabled = true
collision_mask = 11
collide_with_areas = true

[node name="coll_ray1" type="RayCast2D" parent="area_agro"]
modulate = Color( 0.262745, 0.843137, 0.054902, 1 )
rotation = 0.174533
collision_mask = 11
collide_with_areas = true

[node name="coll_ray2" type="RayCast2D" parent="area_agro"]
modulate = Color( 0.262745, 0.843137, 0.054902, 1 )
rotation = -0.174533
collision_mask = 11
collide_with_areas = true

[node name="coll_agro" type="CollisionShape2D" parent="area_agro"]
position = Vector2( -0.0872116, 0.169239 )
shape = SubResource( 3 )

[node name="spr_chobi" type="AnimatedSprite" parent="."]
position = Vector2( -1.64618, 40.1446 )
scale = Vector2( 8, 8 )
frames = SubResource( 19 )
animation = "dead"
frame = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.145

[node name="anim_chobi" type="AnimationPlayer" parent="."]
anims/murido = SubResource( 20 )

[connection signal="area_entered" from="coll_chobi/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="area_agro" to="." method="_on_area_agro_area_entered"]
[connection signal="area_exited" from="area_agro" to="." method="_on_area_agro_area_exited"]
[connection signal="body_entered" from="area_agro" to="." method="_on_area_agro_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
